# OMicroB

./: .gitignore  .merlin  Makefile  README.md  configure
avrs/arduboy/: avr.ml  avr.mli  avr_config.ml  avrlib.c
avrs/arduino_mega_2560/: avr.ml  avr.mli  avr_config.ml  avrlib.c
avrs/arduino_uno/: avr.ml  avr.mli  avrlib.c
benchs/: .gitignore  Makefile  benchpc.ml  gccHarness.c  ocamlrunHarness.ml
benchs/abrsort/: .gitignore  abrsort-c.c  abrsort.ml  abrsort.py
benchs/apply2/: .gitignore  apply2-c.c  apply2.c  apply2.ml  apply2.py
benchs/empty/: Makefile  test.ml
benchs/fibo/: .gitignore  fibo-c.c  fibo.ml  fibo.py
benchs/gcd/: Makefile  gcd-c.c  gcd.ml  gcd.py
benchs/integr/: .gitignore  Makefile  integr.ml
benchs/integrales_tr/: .gitignore  integrales_tr-c.c  integrales_tr.ml  integrales_tr.py
benchs/object/: .gitignore  Makefile  a.out  object.ml  object.py  point.c  point.ml  point.txt
benchs/oddeven/: .gitignore  Makefile  oddeven.ml
benchs/oderiv/: .gitignore  Makefile  oderiv.ml
benchs/queens/: .gitignore  queens-c.c  queens.ml  queens.py  queens1.py
benchs/sieve/: Makefile  sieve.ml
benchs/takc2/: .gitignore  main-takc.py  takc2-c.c  takc2.ml  takc2.py
benchs/taku/: taku.c
doc/: bc2c.1  omicrob.1
lib/: Makefile  lcd_cgrom.txt  pic32.ml  pic32.mli
lib/extra/: Makefile  simul.cmi  simul.cmo  simul.cmx  simul.ml  simul.mli
src/bc2c/: .gitignore  .merlin  Makefile  analyser.ml  arch.ml  arch.mli  cleaner.ml  cleaner.mli  codegen.ml  codegen.mli  datagen.ml  datagen.mli  export.ml  heap.ml  heap.mli  interp.ml  interp.mli  main.ml  mstack.ml  mstack.mli  opcode.ml  opcode.mli  opgen.ml  opgen.mli  printer.ml  printer.mli  pstack.ml  pstack.mli  qhtbl.ml  qhtbl.mli  sharer.ml  sharer.mli  t.mli  tools.ml  tools.mli
targets/: device_config.ml  simul_config.ml
targets/microbit/byterun/ble/: .gitignore  CMakeLists.txt  include_headers.cmake
targets/microbit/byterun/ble-nrf51822/: .gitignore  CMakeLists.txt  include_headers.cmake
targets/microbit/byterun/ble-nrf51822/source/: nRF5xGap.cpp  nRF5xGattServer.cpp  nRF5xGattServer.h  nRF5xSecurityManager.h  nRF5xn.cpp
targets/microbit/byterun/ble-nrf51822/source/btle/: btle.cpp  btle.h
targets/microbit/byterun/ble-nrf51822/source/btle/custom/: custom_helper.cpp
targets/microbit/byterun/ble/ble/: BLE.h  BLEInstanceBase.h  BLEProtocol.h  CallChainOfFunctionPointersWithContext.h  CharacteristicDescriptorDiscovery.h  DiscoveredCharacteristic.h  DiscoveredCharacteristicDescriptor.h  DiscoveredService.h  Gap.h  GapAdvertisingData.h  GapAdvertisingParams.h  GapScanningParams.h  GattAttribute.h  GattCallbackParamTypes.h  GattCharacteristic.h  GattClient.h  GattServer.h  GattServerEvents.h  GattService.h  SafeBool.h  SecurityManager.h  ServiceDiscovery.h  UUID.h
targets/microbit/byterun/ble/ble/services/: BatteryService.h  DeviceInformationService.h
targets/microbit/byterun/ble/source/: BLE.cpp
targets/microbit/byterun/mbed-classic/: .gitignore  CMakeLists.txt  include_headers.cmake  toolchain.cmake
targets/microbit/byterun/mbed-classic/cmsis/: NRF51822.ld  nrf.h
targets/microbit/byterun/mbed-classic/hal/: port_api.c  pwmout_api.c  us_ticker.c
targets/microbit/byterun/microbit/: .gitignore  .yotta.json  CMakeLists.txt  README.md  include_headers.cmake  toolchain.cmake
targets/microbit/byterun/microbit/inc/: MicroBit.h
targets/microbit/byterun/microbit/source/: MicroBit.cpp
targets/microbit/byterun/nrf51-sdk/: .gitignore  CMakeLists.txt  README.md  include_headers.cmake  toolchain.cmake
targets/microbit/byterun/nrf51-sdk/source/ble/ble_services/ble_dfu/: ble_dfu.h
targets/microbit/byterun/nrf51-sdk/source/ble/common/: ble_advdata.h  ble_conn_params.h  ble_conn_state.h  ble_date_time.h  ble_gatt_db.h  ble_sensor_location.h  ble_srv_common.c  ble_srv_common.h
targets/microbit/byterun/nrf51-sdk/source/ble/device_manager/: device_manager.h  device_manager_peripheral.c
targets/microbit/byterun/nrf51-sdk/source/ble/device_manager/config/: device_manager_cnfg.h
targets/microbit/byterun/nrf51-sdk/source/ble/peer_manager/: id_manager.h
targets/microbit/byterun/nrf51-sdk/source/softdevice/common/softdevice_handler/: ble_stack_handler_types.h  softdevice_handler.c
tests/: Makefile
trash/: avr.c  avr.h  avrlib.c  cserial.c  debug.c  debug.h
(+934 files in other folders)
